--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@cloudinary/react": "^1.13.0",
     "@cloudinary/url-gen": "^1.19.0",
     "@heroicons/react": "^2.1.3",
-    "axios": "^1.6.8",
+    "axios": "^0.21.4",
+    "cloudinary-react": "^1.8.1",
     "react": "^18.2.0",
+    "react-cloudinary-upload-widget": "^2.0.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
     "theme-change": "^2.5.0"
