--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,12 @@ dist-ssr
 *.sw?
 
 .env
+.VSCodeCounter/2024-04-30_09-48-10/details.md
+.VSCodeCounter/2024-04-30_09-48-10/diff-details.md
+.VSCodeCounter/2024-04-30_09-48-10/diff.csv
+.VSCodeCounter/2024-04-30_09-48-10/diff.md
+.VSCodeCounter/2024-04-30_09-48-10/diff.txt
+.VSCodeCounter/2024-04-30_09-48-10/results.csv
+.VSCodeCounter/2024-04-30_09-48-10/results.json
+.VSCodeCounter/2024-04-30_09-48-10/results.md
+.VSCodeCounter/2024-04-30_09-48-10/results.txt
